--- a/roop_G.ipynb
+++ b/roop_G.ipynb
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title 1.克隆源代码\n",
+       "#@title 1. Clonar el código fuente\n",
         "!git clone https://github.com/germanbava/roopmodificado2.git\n",
         "!git clone https://github.com/dream80/roop_colab.git\n"
       ]
@@ -48,7 +48,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 2.进入项目\n",
+       "#@title 2. Ingresar al proyecto\n",
         "%cd /content/roop\n",
         "\n",
         "Version = \"v1.1.0\" #@param [\"v1.0.1\",\"v1.1.0\"]\n",
@@ -89,8 +89,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 3.安装依赖\n",
-        "#有红色警告不用担心！\n",
+        "#@title 3. Instalar dependencias\n",
+        "# ¡No te preocupes si hay advertencias en rojo!\n",
         "\n",
         "!pip install -r requirements.txt\n",
         "\n",
@@ -229,7 +229,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 4.准备素材\n",
+        "#@title 4. Preparar recursos\n",
         "source = \"/content/roop_colab/67.jpg\" #@param {type:\"string\"}\n",
         "target = \"/content/roop_colab/2.mp4\" #@param {type:\"string\"}\n",
         "output = \"/content/roop_colab/out.mp4\" #@param {type:\"string\"}"
